<!--Assignment #: InClass02-->
<!--File Name: Group25_InClass02 strings.xml-->
<!--Name: Kristin Pflug-->

<resources>
    <string name="app_name">InClass 02</string>
    <string name="ticket_price">Ticket Price: </string>
    <string name="enter_ticket_price">Enter Ticket Price</string>
    <string name="discount">Discount: </string>
    <string name="discounted_price">Discounted Price: </string>
    <string name="result_text"></string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="five_percent">5%</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="fifty_percent">50%</string>
    <string name="nfeErrorText">Please enter a valid price in the text box.</string>
    <string name="noDiscountSelected">Please choose a discount.</string>
</resources>