<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: InClass02-->
<!--File Name: Group25_InClass02 activity_main.xml-->
<!--Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ticket_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/ticket_price"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/discount"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_label" />

    <TextView
        android:id="@+id/discounted_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="244dp"
        android:text="@string/discounted_price"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discount_label" />

    <Button
        android:id="@+id/calculate_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="349dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discounted_price_label" />

    <EditText
        android:id="@+id/ticket_price_input"
        android:layout_width="233dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_ticket_price"
        android:inputType="textPersonName"
        android:labelFor="@id/ticket_price_label"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/ticket_price_label"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="153dp"
        android:layout_height="252dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/discount_label"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_input">

        <RadioButton
            android:id="@+id/five_percent_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_percent"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/ten_percent_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_percent"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/fifteen_percent_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/twenty_percent_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percent"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/fifty_percent_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifty_percent"
            android:textSize="14sp" />
    </RadioGroup>

    <Button
        android:id="@+id/clear_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="440dp" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="145dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/result_text"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/discounted_price_label"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>